--- a/_data/style.yml
+++ b/_data/style.yml
@@ -11,7 +11,6 @@ contact-image: "../img/contact.png"
 
 # Add custom fonts
 fonts_urls:
-    - "https://fonts.googleapis.com/css?family=Montserrat:400,700"
     - "https://fonts.googleapis.com/css?family=Kaushan+Script"
     - "https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic"
     - "https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700"
@@ -20,7 +19,7 @@ fonts_urls:
 fonts:
   - name: "Montserrat"
     for: "heading"
-  - name: "Kaushan Script"
+  - name: "Montserrat"
     for: "script"
   - name: "Droid Serif"
     for: "serif"
