--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -18,21 +18,21 @@ en: &DEFAULT_EN
 
   services:
     title: "Services"
-    text: "Lorem ipsum"
+    text: ""
     section: services
     list:
-      - title: "E-Commerce"
+      - title: "VR Development"
         desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
         icon: fas fa-shopping-cart #find more at https://fontawesome.com/icons
-      - title: "Responsive Design"
+      - title: "Game Development"
         desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
         icon: fas fa-laptop
-      - title: "[Markdown](https://en.wikipedia.org/wiki/Markdown)"
+      - title: "Game Design"
         desc: "Your description here, full **Markdown** support"
         icon: fab fa-markdown
 
   portfolio:
-    title: "Portfolio"
+    title: "Projects"
     text: "Lorem ipsum dolor sit amet consectetur."
     section: portfolio
     closebutton: "Close Project"
@@ -71,7 +71,7 @@ en: &DEFAULT_EN
   about:
     title: "About Us"
     text: "our story"
-    body: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported."
+    body: "Leicestershire-based SM Studios focuses on innovative creative development, seeking to enhance user experiences."
     section: about
 
   clients:
@@ -80,55 +80,43 @@ en: &DEFAULT_EN
     horizontal-scrolling: "" #"yes/no"
     list:
       - title: "unreal"
-        url: https://github.com/raviriley/agency-jekyll-theme
+        url: #https://github.com/raviriley/agency-jekyll-theme
         logo: assets/img/clients/unreal-logo.png
       - title: "luinc"
-        url: https://github.com/raviriley/agency-jekyll-theme
+        url: #https://github.com/raviriley/agency-jekyll-theme
         logo: assets/img/clients/LU-logo.png
       - title: "metaquest"
-        url: https://github.com/raviriley/agency-jekyll-theme
+        url: #https://github.com/raviriley/agency-jekyll-theme
         logo: assets/img/clients/Meta_Quest-logo.png
 
   team:
-    title: "OUR AMAZING TEAM"
-    text: "Lorem ipsum dolor sit amet consectetur."
-    subtext: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported.
+    title: "TEAM"
+    text: We are the co founders of St Martins studios.
+    subtext: 
     section: team
     people:
-      - name: "Kay Garland"
+      - name: "Anil Yanik"
         role: "Lead Designer"
         image: assets/img/team/500x500.jpg
         social:
-          - url: https://twitter.com
-            icon: fab fa-twitter
-          - url: https://facebook.com
-            icon: fab fa-facebook-f
-          - url: https://linkedin.com
+          - url: https://www.linkedin.com/in/anil-yanik-28267a199/
             icon: fab fa-linkedin-in
-      - name: "Larry Parker"
-        role: "Lead Marketer"
+      - name: "Bilal Guvenc"
+        role: "Lead Developer"
         image: assets/img/team/2.jpg
         social:
-          - url: https://twitter.com
-            icon: fab fa-twitter
-          - url: https://facebook.com
-            icon: fab fa-facebook-f
-          - url: https://linkedin.com
+          - url: https://www.linkedin.com/in/abilalguvenc/
             icon: fab fa-linkedin-in
-      - name: "Diana Perterson"
-        role: "Lead Developer"
+      - name: "Alper Gunes"
+        role: "Director"
         image: assets/img/team/500x500.jpg
         social:
-          - url: https://twitter.com
-            icon: fab fa-twitter
-          - url: https://facebook.com
-            icon: fab fa-facebook-f
-          - url: https://linkedin.com
+          - url: https://www.linkedin.com/in/gunesalper/
             icon: fab fa-linkedin-in
 
   contact:
     title: "Contact Us"
-    text: "Lorem ipsum or call 123456789"
+    text: Looking to enhance your game or VR project? As an outsourcing development company, we specialize in bringing your ideas to life. We're also developing our own innovative project! Email us to schedule a video call for a live demo and explore collaboration opportunities.
     section: contact
     name: "Name*"
     name-validation: "Please enter your name."
