--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ url    : "https://stmartins-studios.com/" # the base hostname & protocol for you
 baseurl: "" # the subpath of your site, e.g. /blog
 
 title      : St Martins Studios
-email      : info@ludologin.co.uk #this is also the email contact forms will go to
+email      : #this is also the email contact forms will go to
 description: "Building VR Simulations"
 author     : Alper
 # logo:     #optional, defaults to site title
@@ -36,4 +36,4 @@ markdown: kramdown
 
 # Uncomment following line to use Formspree form ID based URL instead of email based URL
 # Details: https://help.formspree.io/hc/en-us/articles/360017735154-How-to-prevent-spam
-formspree_form_path: "f/a_form_id"
+formspree_form_path: "f/xkgwlyan"
